--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 h1{
     color: black;
-    background-color: aquamarine;
+    background-color: rgb(255, 127, 127);
     padding: 20px;
     border-radius: 30px;
     border: 1px dotted black;
